# wundergraph-workshop

./: Cargo.toml  README.md  diesel.toml
migrations/2019-11-08-101014_users/: up.sql
migrations/2019-11-08-101400_posts/: down.sql  up.sql
migrations/2019-11-08-101557_comments/: down.sql  up.sql
migrations/2019-11-08-122537_post_state/: down.sql  up.sql
migrations/2019-11-15-114257_posts_at_version/: down.sql  up.sql
src/: diesel_ext.rs  main.rs  pagination.rs  schema.rs
src/graphql/: mod.rs  post_at_version.rs
src/model/: comments.rs  mod.rs  posts.rs  users.rs
