[package]
name = "rustfest_wundergraph_workshop"
version = "0.1.0"
authors = ["Georg Semmler <github@weiznich.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
diesel = {version = "1", features = ["postgres", "r2d2", "chrono"]}
diesel_migrations = "1"
structopt = "0.3"
env_logger = "0.7"
chrono = {version = "0.4", features = ["serde"]}
failure = "0.1"
juniper = "0.14"
wundergraph = {version = "0.1", features = ["postgres", "chrono"]}
